# routes/auth.js
@@ -4,8 +4,8 @@ const router = express.Router();
 
 const authController = require('../controllers/auth');
 
-router.post('/token', authController.getToken);
+router.post('/token', authController.authenticateClient, authController.getToken);
 
-router.delete('/token', authController.revokeToken);
+router.delete('/token', authController.authenticateClient, authController.revokeToken);
 
 module.exports = router;
