# routes/tool.js
@@ -6,8 +6,8 @@ const toolValidator = require('../validators/tool');
 const authController = require('../controllers/auth');
 const toolController = require('../controllers/tool');
 
-router.get('/', authController.authenticate, toolController.getTools);
+router.get('/', authController.authenticateUser, toolController.getTools);
 
-router.post('/', authController.authenticate, toolValidator.validators, toolController.postTools);
+router.post('/', authController.authenticateUser, toolValidator.validators, toolController.postTools);
 
 module.exports = router;
