# routes/user.js
@@ -2,11 +2,10 @@ const express = require('express');
 
 const router = express.Router();
 
+const authController = require('../controllers/auth');
 const userValidator = require('../validators/user');
 const userController = require('../controllers/user');
 
-router.get('/', userController.getUsers);
-
-router.post('/', userValidator.validators, userController.postUsers);
+router.post('/', authController.authenticateClient, userValidator.validators, userController.postUsers);
 
 module.exports = router;
